# spei-drought-classification-dramaga

./: .gitignore  README.md  app.py  build_02_notebook.py  pyproject.toml  requirements.txt
data/: X_test.csv  X_train.csv  dataset_iklim_dramaga_1980_2024.csv  dataset_iklim_dramaga_1980_2024_completed.csv  y_test.csv  y_train.csv
docs/: Laporan.typ  Project_Plan.md  laporan_akhir.typ  reference.bib
dramaga_drought/: __init__.py  data.py  forecasting.py  modelling.py  visualization.py
notebooks/: 01_eda.ipynb  02_feature_engineering.ipynb  03_modelling.ipynb
scrape/: .cache.sqlite  scrape_data.py
scripts/: export_report_figures.py  extract_notebook_images.py  generate_preprocess_svgs.py  list_notebook_image_cells.py
