[project]
name = "spei-drought-classification-dramaga"
version = "1.0.0"
description = "Klasifikasi Tingkat Kekeringan Agrometeorologi Berbasis Indeks SPEI Menggunakan Pendekatan Data Mining pada Data Iklim Harian Dramaga, Bogor Tahun 1980-2024"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imbalanced-learn>=0.14.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "openmeteo-requests>=1.7.5",
    "pandas>=3.0.0",
    "requests-cache>=1.3.0",
    "retry-requests>=2.0.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.3",
    "xgboost>=3.2.0",
]
